# api/server/v1/docs/swagger/swagger.json
@@ -162,7 +162,7 @@
                         "description": "OK",
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/models.ResponseDevice"
+                            "$ref": "#/definitions/models.Device"
                         }
                     },
                     "400": {
@@ -369,6 +369,80 @@
                         "schema": {
                             "type": "object",
                             "$ref": "#/definitions/models.DeviceListModel"
+                        }
+                    },
+                    "400": {
+                        "description": "some error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/models.ErrorModel"
+                        }
+                    },
+                    "404": {
+                        "description": "some error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/models.ErrorModel"
+                        }
+                    },
+                    "500": {
+                        "description": "some error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/models.ErrorModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/devices/search": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Search device by name",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "device"
+                ],
+                "summary": "Search device",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "query",
+                        "name": "query",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "offset",
+                        "name": "offset",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/models.SearchDeviceResponse"
                         }
                     },
                     "400": {
@@ -688,6 +762,80 @@
                         "schema": {
                             "type": "object",
                             "$ref": "#/definitions/models.NodeListModel"
+                        }
+                    },
+                    "400": {
+                        "description": "some error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/models.ErrorModel"
+                        }
+                    },
+                    "404": {
+                        "description": "some error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/models.ErrorModel"
+                        }
+                    },
+                    "500": {
+                        "description": "some error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/models.ErrorModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/nodes/search": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Search node by name",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "node"
+                ],
+                "summary": "Search node",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "query",
+                        "name": "query",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "offset",
+                        "name": "offset",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/models.SearchNodeResponse"
                         }
                     },
                     "400": {
@@ -2553,17 +2701,15 @@
         "models.Device": {
             "type": "object",
             "properties": {
-                "address": {
-                    "type": "integer"
-                },
-                "baud": {
-                    "type": "integer"
-                },
                 "created_at": {
                     "type": "string"
                 },
                 "description": {
                     "type": "string"
+                },
+                "device": {
+                    "type": "object",
+                    "$ref": "#/definitions/models.ParentDevice"
                 },
                 "device_id": {
                     "type": "integer"
@@ -2577,22 +2723,18 @@
                 "name": {
                     "type": "string"
                 },
-                "node_id": {
-                    "type": "integer"
+                "node": {
+                    "type": "object",
+                    "$ref": "#/definitions/models.Node"
                 },
-                "sleep": {
-                    "type": "integer"
+                "properties": {
+                    "type": "object",
+                    "$ref": "#/definitions/models.DeviceProperties"
                 },
                 "status": {
                     "type": "string"
                 },
-                "stop_bite": {
-                    "type": "integer"
-                },
-                "timeout": {
-                    "type": "integer"
-                },
-                "tty": {
+                "type": {
                     "type": "string"
                 },
                 "updated_at": {
@@ -2606,7 +2748,7 @@
                 "items": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.UserShotModel"
+                        "$ref": "#/definitions/models.Device"
                     }
                 },
                 "meta": {
@@ -2624,6 +2766,9 @@
                     }
                 }
             }
+        },
+        "models.DeviceProperties": {
+            "type": "object"
         },
         "models.ErrorModel": {
             "type": "object",
@@ -2681,44 +2826,36 @@
         "models.NewDevice": {
             "type": "object",
             "properties": {
-                "address": {
-                    "type": "integer"
-                },
-                "baud": {
-                    "type": "integer"
-                },
                 "description": {
                     "type": "string"
                 },
-                "device_id": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "is_group": {
-                    "type": "boolean"
+                "device": {
+                    "type": "object",
+                    "$ref": "#/definitions/models.ParentDevice"
                 },
                 "name": {
                     "type": "string"
                 },
-                "node_id": {
-                    "type": "integer"
+                "node": {
+                    "type": "object",
+                    "$ref": "#/definitions/models.NewDeviceNode"
                 },
-                "sleep": {
-                    "type": "integer"
+                "properties": {
+                    "type": "object"
                 },
                 "status": {
                     "type": "string"
                 },
-                "stop_bite": {
-                    "type": "integer"
-                },
-                "timeout": {
-                    "type": "integer"
-                },
-                "tty": {
+                "type": {
                     "type": "string"
+                }
+            }
+        },
+        "models.NewDeviceNode": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
                 }
             }
         },
@@ -2924,20 +3061,11 @@
                 }
             }
         },
-        "models.ResponseDevice": {
+        "models.ParentDevice": {
             "type": "object",
             "properties": {
-                "code": {
-                    "type": "string"
-                },
-                "data": {
-                    "type": "object",
-                    "properties": {
-                        "device": {
-                            "type": "object",
-                            "$ref": "#/definitions/models.Device"
-                        }
-                    }
+                "id": {
+                    "type": "integer"
                 }
             }
         },
@@ -3135,6 +3263,28 @@
                 }
             }
         },
+        "models.SearchDeviceResponse": {
+            "type": "object",
+            "properties": {
+                "devices": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Device"
+                    }
+                }
+            }
+        },
+        "models.SearchNodeResponse": {
+            "type": "object",
+            "properties": {
+                "nodes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Node"
+                    }
+                }
+            }
+        },
         "models.SearchRoleResponse": {
             "type": "object",
             "properties": {
@@ -3149,43 +3299,27 @@
         "models.UpdateDevice": {
             "type": "object",
             "properties": {
-                "address": {
-                    "type": "integer"
-                },
-                "baud": {
-                    "type": "integer"
-                },
                 "description": {
                     "type": "string"
                 },
-                "device_id": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "is_group": {
-                    "type": "boolean"
+                "device": {
+                    "type": "object",
+                    "$ref": "#/definitions/models.ParentDevice"
                 },
                 "name": {
                     "type": "string"
                 },
-                "node_id": {
-                    "type": "integer"
+                "node": {
+                    "type": "object",
+                    "$ref": "#/definitions/models.NewDeviceNode"
                 },
-                "sleep": {
-                    "type": "integer"
+                "properties": {
+                    "type": "object"
                 },
                 "status": {
                     "type": "string"
                 },
-                "stop_bite": {
-                    "type": "integer"
-                },
-                "timeout": {
-                    "type": "integer"
-                },
-                "tty": {
+                "type": {
                     "type": "string"
                 }
             }
