# api/server/v1/models/node.go
@@ -40,3 +40,7 @@ type NodeListModel struct {
 		ObjectsCount int `json:"objects_count"`
 	}
 }
+
+type SearchNodeResponse struct {
+	Nodes []Node `json:"nodes"`
+}
